--- a/FribergCarRentals/Views/Shared/_Layout.cshtml
+++ b/FribergCarRentals/Views/Shared/_Layout.cshtml
@@ -34,8 +34,8 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Booking" asp-action="Index">Bookings</a>
                         </li>
-                        
                     </ul>
+                    <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
