--- a/FribergCarRentals/Views/Shared/_LoginPartial.cshtml
+++ b/FribergCarRentals/Views/Shared/_LoginPartial.cshtml
@@ -23,5 +23,8 @@ else
     <li class="nav-item">
         <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
     </li>
+    <li class="nav-item">
+            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Test</a>
+    </li>
 }
 </ul>
