--- a/FribergCarRentals/Views/Car/Details.cshtml
+++ b/FribergCarRentals/Views/Car/Details.cshtml
@@ -1,6 +1,7 @@
 ﻿@model FribergCarRentals.Models.Car
 
-@{
+@if (ViewData != null)
+{
     ViewData["Title"] = "Details";
 }
 
@@ -10,27 +11,40 @@
     <h4>Car</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Brand)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Brand)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Model)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Model)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ModelYear)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ModelYear)
+        </dd>
+        <dt class="col-sm-2">
+            Image
+        </dt>
+        <dd class="col-sm-10">
+            @if (Model.Image != null && Model.Image.Length > 0)
+            {
+                <img src="data:@Model.ImageFormat;base64,@Convert.ToBase64String(Model.Image)" alt="Car Image" style="max-width: 100%; height: auto;" />
+            }
+            else
+            {
+                <p>No image available</p>
+            }
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
