--- a/FribergCarRentals/Views/Booking/Delete.cshtml
+++ b/FribergCarRentals/Views/Booking/Delete.cshtml
@@ -1,33 +1,46 @@
-﻿@model FribergCarRentals.Models.Booking
+﻿@model FribergCarRentals.Models.BookingViewModel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Booking";
 }
 
-<h1>Delete</h1>
+<h1>Delete Booking</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h4>Booking</h4>
+<hr />
 <div>
-    <h4>Booking</h4>
+    <h4>Are you sure you want to delete this?</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Car)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Car)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.User)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.User)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Start)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Start)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.End)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.End)
         </dd>
     </dl>
-    
-    <form asp-action="Delete">
+
+    <form asp-action="DeleteConfirmed">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index" class="btn btn-secondary">Back to List</a>
     </form>
 </div>
