--- a/FribergCarRentals/Views/User/Details.cshtml
+++ b/FribergCarRentals/Views/User/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model FribergCarRentals.Models.User
+﻿@model Microsoft.AspNetCore.Identity.IdentityUser
 
 @{
     ViewData["Title"] = "Details";
@@ -10,29 +10,17 @@
     <h4>User</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FirstName)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.UserName)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FirstName)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.UserName)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LastName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.LastName)
-        </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Email)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Email)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PassWord)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PassWord)
         </dd>
     </dl>
 </div>
