--- a/FribergCarRentals/Views/Booking/Create.cshtml
+++ b/FribergCarRentals/Views/Booking/Create.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Create Booking";
+    var isAdmin = User.IsInRole("Admin");
 }
 
 <h1>Create Booking</h1>
@@ -34,5 +35,5 @@
     </div>
 </div>
 <div>
-    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+    <a asp-action="@((isAdmin) ? "Index" : "MyBookings")" class="btn btn-secondary">Back to List</a>
 </div>
