--- a/FribergCarRentals/Views/Booking/Delete.cshtml
+++ b/FribergCarRentals/Views/Booking/Delete.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Delete Booking";
+    var isAdmin = User.IsInRole("Admin");
 }
 
 <h1>Delete Booking</h1>
@@ -41,6 +42,6 @@
     <form asp-action="DeleteConfirmed">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+        <a asp-action="@((isAdmin) ? "Index" : "MyBookings")" class="btn btn-secondary">Back to List</a>
     </form>
 </div>
